sonar lint code refactor